--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@shopify/restyle": "^2.4.5",
     "react": "19.1.1",
     "react-native": "0.82.0",
-    "react-native-safe-area-context": "^5.5.2"
+    "react-native-safe-area-context": "^5.5.2",
+    "react-native-svg": "^15.14.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
