--- a/package.json
+++ b/package.json
@@ -10,12 +10,10 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-native/new-app-screen": "0.82.0",
-    "@shopify/restyle": "^2.4.5",
     "react": "19.1.1",
     "react-native": "0.82.0",
-    "react-native-safe-area-context": "^5.5.2",
-    "react-native-svg": "^15.14.0"
+    "@react-native/new-app-screen": "0.82.0",
+    "react-native-safe-area-context": "^5.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
