--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@react-native/new-app-screen": "0.82.0",
+    "@react-navigation/native": "^7.1.18",
+    "@react-navigation/native-stack": "^7.3.28",
     "@shopify/restyle": "^2.4.5",
     "react": "19.1.1",
     "react-native": "0.82.0",
     "react-native-safe-area-context": "^5.5.2",
+    "react-native-screens": "^4.17.1",
     "react-native-svg": "^15.14.0"
   },
   "devDependencies": {
