--- a/package.json
+++ b/package.json
@@ -10,18 +10,22 @@
     "test": "jest"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "@react-native/new-app-screen": "0.82.0",
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/native-stack": "^7.3.28",
     "@shopify/restyle": "^2.4.5",
     "react": "19.1.1",
+    "react-hook-form": "^7.65.0",
     "react-native": "0.82.0",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.17.1",
-    "react-native-svg": "^15.14.0"
+    "react-native-svg": "^15.14.0",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@babel/plugin-transform-export-namespace-from": "^7.27.1",
     "@babel/preset-env": "^7.25.3",
     "@babel/runtime": "^7.25.0",
     "@react-native-community/cli": "20.0.0",
