chore(config): add domain and brand paths to babel and tsconfig aliases

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,9 @@
       "@hooks": ["src/hooks"],
       "@routes": ["src/routes"],
       "@screens": ["src/screens"],
-      "@theme": ["src/theme"]
+      "@theme": ["src/theme"],
+      "@domain": ["src/domain"],
+      "@brand": ["src/brand"]
     },
     "ignoreDeprecations": "6.0"
   }
