--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/native-stack": "^7.3.28",
     "@shopify/restyle": "^2.4.5",
+    "axios": "^1.13.0",
     "react": "19.1.1",
     "react-hook-form": "^7.65.0",
     "react-native": "0.82.0",
