chore(config): add api and types modules to babel and tsconfig alias

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,9 @@
       "@screens": ["src/screens"],
       "@theme": ["src/theme"],
       "@domain": ["src/domain"],
-      "@brand": ["src/brand"]
+      "@brand": ["src/brand"],
+      "@api": ["src/api"],
+      "@types": ["src/types"]
     },
     "ignoreDeprecations": "6.0"
   }
