--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/native-stack": "^7.3.28",
     "@shopify/restyle": "^2.4.5",
+    "@tanstack/react-query": "4.32.6",
     "axios": "^1.13.0",
     "date-fns": "^4.1.0",
     "react": "19.1.1",
+    "react-dom": "^19.2.0",
     "react-hook-form": "^7.65.0",
     "react-native": "0.82.0",
     "react-native-safe-area-context": "^5.5.2",
@@ -41,6 +43,7 @@
     "@react-native/eslint-config": "0.82.0",
     "@react-native/metro-config": "0.82.0",
     "@react-native/typescript-config": "0.82.0",
+    "@tanstack/eslint-plugin-query": "^5.91.2",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.1.1",
     "@types/react-test-renderer": "^19.1.0",
