chore(deps): add react-native-async-storage and react-native-mmkv to project dependencies

--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "start": "react-native start",
     "test": "jest",
     "prepare": "husky install",
-    "art:3333": "adb reverse tcp:3333 tcp:3333"
+    "art:3333": "adb reverse tcp:3333 tcp:3333",
+    "ap": "adb shell input text"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native/new-app-screen": "0.82.0",
     "@react-navigation/bottom-tabs": "^7.5.0",
     "@react-navigation/native": "^7.1.18",
@@ -25,6 +27,8 @@
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.65.0",
     "react-native": "0.82.0",
+    "react-native-mmkv": "^4.0.0",
+    "react-native-nitro-modules": "^0.31.6",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.17.1",
     "react-native-svg": "^15.14.0",
