--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
       "@types": ["src/types"],
       "@utils": ["src/utils"],
       "@infra": ["src/infra"],
-      "@services": ["src/services"]
+      "@services": ["src/services"],
+      "test-utils": ["src/test/test-utils"]
     }
   }
 }
