--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tanstack/react-query": "4.32.6",
     "axios": "^1.13.0",
     "date-fns": "^4.1.0",
+    "lodash": "^4.17.21",
     "react": "19.1.1",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.65.0",
@@ -52,6 +53,7 @@
     "@tanstack/eslint-plugin-query": "^5.91.2",
     "@testing-library/react-native": "^13.3.3",
     "@types/jest": "^29.5.13",
+    "@types/lodash": "^4.17.21",
     "@types/react": "^19.1.1",
     "@types/react-test-renderer": "^19.1.0",
     "babel-plugin-module-resolver": "^5.0.2",
@@ -60,38 +62,13 @@
     "eslint-plugin-testing-library": "^7.13.5",
     "husky": "^9.1.7",
     "jest": "^29.6.3",
+    "msw": "^2.12.4",
     "prettier": "2.8.8",
     "react-test-renderer": "19.1.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   },
   "engines": {
     "node": ">=20"
-  },
-  "jest": {
-    "preset": "react-native",
-    "setupFiles": [
-      "<rootDir>/src/test/jestSetup.ts"
-    ],
-    "transformIgnorePatterns": [
-      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|@react-navigation/.*|native-base|react-native-svg)"
-    ],
-    "moduleDirectories": [
-      "node_modules",
-      "./src/test"
-    ],
-    "moduleNameMapper": {
-      "^react-native-mmkv$": "<rootDir>/__mocks__/react-native-mmkv/react-native-mmkv.ts"
-    },
-    "modulePathIgnorePatterns": [
-      ".*/mockedData/.*"
-    ],
-    "collectCoverageFrom": [
-      "src/{utils,components,hooks,domain}/**/*.{ts,tsx}"
-    ],
-    "coveragePathIgnorePatterns": [
-      "/node_modules/",
-      "src/types/",
-      "index"
-    ]
   }
 }
