--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
       "@utils": ["src/utils"],
       "@infra": ["src/infra"],
       "@services": ["src/services"],
+      "@test": ["src/test"],
       "test-utils": ["src/test/test-utils"]
     }
   }
