--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-camera-roll/camera-roll": "^7.10.2",
     "@react-native/new-app-screen": "0.82.0",
     "@react-navigation/bottom-tabs": "^7.5.0",
     "@react-navigation/native": "^7.1.18",
@@ -32,9 +33,11 @@
     "react-native": "0.82.0",
     "react-native-mmkv": "^4.0.0",
     "react-native-nitro-modules": "^0.31.6",
+    "react-native-permissions": "^5.4.4",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.17.1",
     "react-native-svg": "^15.14.0",
+    "react-native-vision-camera": "^4.7.3",
     "zod": "^4.1.12",
     "zustand": "^5.0.8"
   },
