chore(assets): add images directory with placeholder and configure path aliases

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
       "@utils": ["src/utils"],
       "@infra": ["src/infra"],
       "@services": ["src/services"],
+      "@assets": ["src/assets"],
       "@test": ["src/test"],
       "test-utils": ["src/test/test-utils"]
     }
